[gd_scene load_steps=12 format=3 uid="uid://c4lmhavj60tqh"]

[ext_resource type="Script" path="res://addons/goat/main_scenes/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bhat28de4h0ds" path="res://addons/goat/helper_scenes/RayCast3D.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://dxkp5rfk21fkw" path="res://addons/goat/fonts/Tuffy.ttf" id="3_ooag5"]
[ext_resource type="PackedScene" uid="uid://06q5uaw87s6g" path="res://addons/goat/helper_scenes/InventoryBar.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b464w5qqal0bx" path="res://addons/goat/helper_scenes/Inventory.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cyx7u5m2w8vek" path="res://addons/goat/helper_scenes/ContextInventory.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bfp8pkh3uyq0f" path="res://addons/goat/helper_scenes/Subtitles.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://dffabq48ebajf" path="res://addons/goat/helper_scenes/Settings.tscn" id="8"]

[sub_resource type="CylinderShape3D" id="1"]
height = 1.8
radius = 0.3

[sub_resource type="CylinderShape3D" id="2"]
height = 0.7
radius = 0.3

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ku2yt"]
dof_blur_far_enabled = true
dof_blur_far_distance = 0.01
dof_blur_far_transition = 0.01
dof_blur_amount = 0.29

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1")

[node name="CollisionShapeStanding" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("1")

[node name="CollisionShapeCrouched" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
shape = SubResource("2")
disabled = true

[node name="Camera3D" type="Camera3D" parent="." groups=["goat_cameras_player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
attributes = SubResource("CameraAttributesPractical_ku2yt")
current = true

[node name="RayCast3D" parent="Camera3D" instance=ExtResource("3")]
target_position = Vector3(0, 0, -2)
category = "environment"

[node name="Hand" type="Node3D" parent="Camera3D" groups=["goat_player_hand"]]
transform = Transform3D(0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 0, -0.05, -0.069)

[node name="Scope" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -7.0
offset_right = 2.0
offset_bottom = 7.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ooag5")
theme_override_font_sizes/font_size = 8
text = "Â·"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryBar" parent="." instance=ExtResource("4")]

[node name="Inventory" parent="." instance=ExtResource("5")]
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="ContextInventory" parent="." instance=ExtResource("6")]

[node name="Subtitles" parent="." instance=ExtResource("7")]

[node name="Settings" parent="." instance=ExtResource("8")]

[node name="GravityRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
target_position = Vector3(0, -10, 0)
collision_mask = 4

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[node name="AreaStanding" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaStanding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("1")

[connection signal="timeout" from="GravityTimer" to="." method="_on_GravityTimer_timeout"]
