[gd_scene load_steps=6 format=2]

[ext_resource path="res://goat/main_scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://goat/environments/default_environment.tres" type="Environment" id=2]
[ext_resource path="res://goat/helper_scenes/RayCast3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://goat/main_scenes/GoatPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 1.8

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="." groups=[
"goat_camera",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0 )
environment = ExtResource( 2 )

[node name="RayCast3D" parent="Camera" instance=ExtResource( 3 )]
enabled = true
cast_to = Vector3( 0, 0, -2 )
category = "environment"

[node name="GoatPlayer" parent="." instance=ExtResource( 4 )]
